--- a/my-app/src/pages/tutorial/TutorialScreenStyle.css
+++ b/my-app/src/pages/tutorial/TutorialScreenStyle.css
@@ -1,22 +1,42 @@
-.main {
+.tutorial__page-container {
+    display: flex;
+    flex-direction: column;
     padding-top: 10vh;
+    align-items: center;
+}
+
+.tutorial__inputRow {
     flex-direction: row;
     justify-content: center;
     display: flex;
-}
-
-.inputRow {
-    flex-direction: row;
-    justify-content: center;
-    display: flex;
-    padding-top: 2ch;
-}
-
-.content-wrapper {
-    justify-content: center;
+    padding: 1em;
+    margin-bottom: 1em;
     width: 700px;
+}
+
+.tutorial__content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 700px;
+}
+
+.tutorial__title_h1 {
+    margin: 0 0 24px 0;
+    font-size: xx-large;
+}
+
+.tutorial__title_h2 {
+    margin: 1em 0 0 0;
+    font-size: x-large;
+    align-self:flex-start;
+}
+
+.tutorial__content {
+    font-size: large;
+    margin: 1em 0 0 0;
 }
 
 #TabelaExemplo {
-    width: 700px;
+    width: 600px;
 }
