--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar {
+  display: flex;
+  background-color: rgb(114, 224, 114);
+  box-shadow: 0 1px 1px 0 black;
+  justify-content: center;
+  margin-bottom: 2em;
+  border-radius: 0 0 8px 8px;
+}
+
+.navbar__btn {
+  margin: 1em;
+  padding: 5px 1em;
+  background-color: white;
+  border-radius: 8px;
+  font-weight: 700;
+  box-shadow: 0 3px 1px 0 black;
+  text-decoration: none;
+}
+
+.navbar__btn:hover {
+  box-shadow: none;
+  text-decoration: underline;
+}
