--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -39,11 +39,12 @@
 
 .navbar {
   display: flex;
-  background-color: rgb(114, 224, 114);
+  background-color: #80ba00;
   box-shadow: 0 1px 1px 0 black;
   justify-content: center;
   margin-bottom: 2em;
   border-radius: 0 0 8px 8px;
+  height: 66px;
 }
 
 .navbar__btn {
@@ -54,9 +55,15 @@
   font-weight: 700;
   box-shadow: 0 3px 1px 0 black;
   text-decoration: none;
+  color: black;
 }
 
 .navbar__btn:hover {
+  color: black;
+}
+
+.navbar__btn:active {
   box-shadow: none;
-  text-decoration: underline;
+  margin-top: 19px;
+  color: black;
 }
