--- a/my-app/src/pages/about/AboutScreenStyle.css
+++ b/my-app/src/pages/about/AboutScreenStyle.css
@@ -15,9 +15,15 @@
     flex-direction: column;
     margin: 0;
     padding: 0;
-    /* font-size: large; */
+    font-size: large;
 }
 
 .about__item {
     margin-left: 1em;
+    font-size: large;
+}
+
+.about__content {
+    font-size: large;
+    margin: 1em 0 0 0;
 }
