--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -56,6 +56,7 @@
   box-shadow: 0 3px 1px 0 black;
   text-decoration: none;
   color: black;
+  transition-duration: 0.1s;
 }
 
 .navbar__btn:hover {
