--- a/my-app/src/pages/calculator/CalculatorScreenStyle.css
+++ b/my-app/src/pages/calculator/CalculatorScreenStyle.css
@@ -5,9 +5,10 @@
 }
 
 .inputRow {
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    display: flex;
+    align-items: center;
     padding-top: 2ch;
 }
 
