--- a/my-app/src/pages/about/AboutScreenStyle.css
+++ b/my-app/src/pages/about/AboutScreenStyle.css
@@ -4,6 +4,12 @@
     align-items: center;
 }
 
+.about__container-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .about__card {
     padding: 1em;
     margin-bottom: 1em;
