--- a/my-app/src/pages/register/RegisterScreenStyle.css
+++ b/my-app/src/pages/register/RegisterScreenStyle.css
@@ -1,15 +1,21 @@
-.inputRow {
+.mainRegister {
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    display: flex;
-    padding-top: 2ch;
 }
 
 .inputRowWithIcon {
-    padding-left: 4.7vh;
+    display: flex;
     flex-direction: row;
     justify-content: center;
+    padding-left: 4.7ch;
+    padding-top: 2ch;
+}
+
+.inputRow {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     padding-top: 2ch;
 }
 
@@ -17,13 +23,13 @@
     background-color: black;
     width: 100%;
     height: 0.10vh;
-    margin: 2vh 0;
+    margin: 2ch 0;
     opacity: 0.2;
 }
 
 .pageTitle {
-    flex-direction: column;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -47,14 +53,4 @@
 .inputWrapper {
     padding-left: 2ch;
     padding-right: 2ch;
-}
-
-.selectInputWrapper {
-    padding-right: 4ch;
-}
-
-.mainRegister {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
 }
