fix: Margin Spacement

--- a/my-app/src/pages/ingredient-suggestion/IngredientSuggestionScreenStyle.css
+++ b/my-app/src/pages/ingredient-suggestion/IngredientSuggestionScreenStyle.css
@@ -4,11 +4,10 @@
     justify-content: center;
 }
 
-.inputRow {
+.suggestion__inputRow {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-top: 2ch;
 }
 
 .selectInputWrapper {
