fix: Eye Icon Aligment

--- a/my-app/src/pages/login/LoginScreenStyle.css
+++ b/my-app/src/pages/login/LoginScreenStyle.css
@@ -16,6 +16,6 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding-left: 4.7ch;
+    padding-left: 40px;
     padding-top: 2ch;
 }
