--- a/my-app/src/pages/register/RegisterScreenStyle.css
+++ b/my-app/src/pages/register/RegisterScreenStyle.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding-left: 4.7ch;
+    padding-left: 40px;
     padding-top: 2ch;
 }
 
